byoh-stage-reference/tks-admin-tools/harbor/Ingress_harbor-ingress.yaml
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "harbor-ingress"
  labels:
    heritage: Helm
    release: harbor
    chart: harbor
    app: "harbor"
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: http0issuer
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    virtual-server.f5.com/clientssl: '[ { "hosts": [ "skbroadband.com" ], "bigIpProfile":
      "/Common/skbroadband" } ]'
    virtual-server.f5.com/health: |
      [
        {
          "path":     "TO_BE_FIXED",
          "send":     "HTTP GET /",
          "interval": 5,
          "timeout":  10
        }
      ]
    virtual-server.f5.com/ip: TO_BE_FIXED
    virtual-server.f5.com/partition: TO_BE_FIXED
spec:
  ingressClassName: f5
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /service/
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /v2/
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /chartrepo/
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /c/
        pathType: Prefix
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
    host: TO_BE_FIXED
